--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: 'Build'
+name: "Build"
 on:
   - workflow_dispatch
 jobs:
@@ -6,3 +6,9 @@ jobs:
     uses: ./.github/workflows/main.yml
     with:
       mode: '["build"]'
+      alphas: "default"
+      nav: "default"
+      clipboard: "mac"
+      layers: "default"
+      mapping: "default"
+      kmonad_os: "mac"
