--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,9 +6,9 @@ jobs:
     uses: ./.github/workflows/main.yml
     with:
       mode: '["build"]'
-      alphas: "default"
-      nav: "default"
-      clipboard: "mac"
-      layers: "default"
-      mapping: "default"
-      kmonad_os: "mac"
+      alphas: '["default"]'
+      nav: '["default"]'
+      clipboard: '["mac"]'
+      layers: '["default"]'
+      mapping: '["default"]'
+      kmonad_os: '["mac"]'
