--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,4 +10,5 @@ jobs:
       nav: '["default"]'
       clipboard: '["mac"]'
       layers: '["default"]'
+      mapping: '["lite"]'
       kmonad_os: '["mac"]'
